--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
-  "name": "krds-react",
-  "description": "React components for the Korean Design System",
+  "name": "@krds-ui/react",
+  "version": "0.1.0",
+  "description": "React library of South Korean digital government service UI/UX guidelines.",
+  "private": true,
+  "scripts": {
+    "dev": "lerna run dev",
+    "build": "lerna run build",
+    "test": "lerna run test",
+    "lint": "lerna run lint",
+    "clean": "lerna clean",
+    "version": "lerna version",
+    "publish": "lerna publish"
+  },
   "keywords": [
     "react",
     "krds",
@@ -9,53 +20,17 @@
     "design system",
     "component library"
   ],
-  "private": true,
-  "version": "0.1.0",
+  "author": "Lukas.J.Han <lukas.j.han@gmail.com>",
+  "authors": [],
   "license": "Apache-2.0",
-  "type": "module",
-  "files": [
-    "dist"
-  ],
-  "main": "./dist/krds-react.umd.js",
-  "module": "./dist/krds-react.es.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/krds-react.es.js",
-      "require": "./dist/krds-react.umd.js"
-    }
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+  "engines": {
+    "node": ">=16"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.15.0",
-    "@typescript-eslint/parser": "^7.15.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "postcss": "^8.4.40",
-    "sass": "^1.77.8",
-    "tailwindcss": "^3.4.7",
+    "lerna": "^8.1.7",
+    "tsx": "^4.16.2",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4",
-    "vite-plugin-dts": "4.0.0-beta.1"
-  },
-  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
+    "vite": "^5.3.4"
+  }
 }
