--- a/examples/core/package.json
+++ b/examples/core/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@krds-ui/core": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
