--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,29 +1,20 @@
 {
-  "name": "krds-react",
-  "description": "React components for the Korean Design System",
-  "keywords": [
-    "react",
-    "krds",
-    "korea design system",
-    "korea web design",
-    "design system",
-    "component library"
-  ],
-  "private": true,
-  "version": "0.1.0",
-  "license": "Apache-2.0",
+  "name": "@krds-ui/core",
+  "version": "0.0.0",
   "type": "module",
+  "main": "./dist/index.umd.js",
+  "module": "./dist/index.es.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
-  "main": "./dist/krds-react.umd.js",
-  "module": "./dist/krds-react.es.js",
-  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/krds-react.es.js",
-      "require": "./dist/krds-react.umd.js"
-    }
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./dist/style.css": "./dist/style.css"
   },
   "scripts": {
     "dev": "vite",
@@ -35,10 +26,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
   "devDependencies": {
     "@types/node": "^22.0.0",
     "@types/react": "^18.3.3",
@@ -46,16 +33,16 @@
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.40",
-    "sass": "^1.77.8",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
-    "vite-plugin-dts": "4.0.0-beta.1"
-  },
-  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
+    "vite-plugin-dts": "4.0.0-beta.2"
+  }
 }
