--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,6 +43,7 @@
     "tailwindcss": "^3.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
-    "vite-plugin-dts": "4.0.0-beta.2"
+    "vite-plugin-dts": "4.0.0-beta.2",
+    "@krds-ui/tailwindcss-plugin": "workspace:*"
   }
 }
