--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "lerna run lint",
     "clean": "lerna clean",
     "version:release": "lerna version --no-private",
-    "publish:release": "lerna publish --yes --no-private"
+    "publish:release": "lerna publish --yes --no-private",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [
     "react",
@@ -33,8 +35,18 @@
     "url": "https://github.com/KRDS-community/krds-react/issues"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.6.1",
+    "@storybook/addon-essentials": "^8.2.7",
+    "@storybook/addon-interactions": "^8.2.7",
+    "@storybook/addon-links": "^8.2.7",
+    "@storybook/addon-onboarding": "^8.2.7",
+    "@storybook/blocks": "^8.2.7",
+    "@storybook/react": "^8.2.7",
+    "@storybook/react-vite": "^8.2.7",
+    "@storybook/test": "^8.2.7",
     "@types/node": "^22.0.0",
     "lerna": "^8.1.7",
+    "storybook": "^8.2.7",
     "tsx": "^4.16.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
