--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "lerna run lint",
     "clean": "lerna clean",
     "version:release": "lerna version --no-private",
-    "publish:release": "lerna publish --yes --no-private"
+    "publish:release": "lerna publish --yes --no-private",
+    "bundlewatch": "bundlewatch"
   },
   "keywords": [
     "react",
@@ -34,9 +35,25 @@
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
+    "bundlewatch": "^0.4.0",
     "lerna": "^8.1.7",
     "tsx": "^4.16.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
+  },
+  "bundlewatch": {
+    "trackBranches": [
+      "main"
+    ],
+    "files": [
+      {
+        "path": "./packages/*/dist/index.*.js",
+        "maxSize": "100 KB"
+      },
+      {
+        "path": "./packages/*/dist/style.css",
+        "maxSize": "100 KB"
+      }
+    ]
   }
 }
