--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "lerna clean",
     "version:release": "lerna version --no-private",
     "publish:release": "lerna publish --yes --no-private",
+    "bundlewatch": "bundlewatch",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
@@ -45,10 +46,26 @@
     "@storybook/react-vite": "^8.2.7",
     "@storybook/test": "^8.2.7",
     "@types/node": "^22.0.0",
+    "bundlewatch": "^0.4.0",
     "lerna": "^8.1.7",
     "storybook": "^8.2.7",
     "tsx": "^4.16.2",
     "typescript": "^5.2.2",
     "vite": "^5.3.4"
+  },
+  "bundlewatch": {
+    "trackBranches": [
+      "main"
+    ],
+    "files": [
+      {
+        "path": "./packages/*/dist/index.*.js",
+        "maxSize": "100 KB"
+      },
+      {
+        "path": "./packages/*/dist/style.css",
+        "maxSize": "100 KB"
+      }
+    ]
   }
 }
