--- a/packages/tailwindcss-plugin/package.json
+++ b/packages/tailwindcss-plugin/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@krds-ui/tailwindcss-plugin",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "type": "module",
   "main": "./krds-plugin.js",
   "devDependencies": {
-    "vite": "^5.3.4",
-    "tailwindcss": "^3.4.7"
+    "tailwindcss": "^3.4.7",
+    "vite": "^5.3.4"
   }
 }
