feat: add i18next libraries (#100) - apply i18next to the calendar and pagination components. - add ko.ts and en.ts for i18n - change storybook preview.ts for i18n
Signed-off-by: Jeongyong Park <kladess@gmail.com>

--- a/package.json
+++ b/package.json
@@ -49,6 +49,9 @@
     "@storybook/test": "^8.2.7",
     "@types/node": "^22.0.0",
     "bundlewatch": "^0.4.0",
+    "i18next": "^24.2.1",
+    "react-i18next": "^15.4.0",
+    "i18next-browser-languagedetector": "^8.0.2",
     "lerna": "^8.1.7",
     "prettier": "1.19.1",
     "storybook": "^8.2.7",
