--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -39,6 +39,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "i18next": "^24.2.1",
+    "react-i18next": "^15.4.0",
+    "i18next-browser-languagedetector": "^8.0.2",
     "postcss": "^8.4.40",
     "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.7",
