--- a/examples/core/package.json
+++ b/examples/core/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@krds-ui/core": "workspace:*",
+    "i18next": "^24.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@krds-ui/core": "workspace:*"
+    "react-i18next": "^15.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
