--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,9 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "npmClient": "pnpm",
   "exact": true,
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "command": {
     "publish": {
       "conventionalCommits": true
